# fmar-training-python-1

.circleci/: config.yml
fmar-training/: .flake8  .gitignore  pyproject.toml
fmar-training/app/: main.py
fmar-training/tests/: test_main.py
