[tool.poetry]
name = "fmar-training"
version = "0.1.0"
description = ""
authors = ["Fabio Marchesi <fmar@bendingspoons.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
priority = "default" # `default = true` if you are on a Poetry version before 1.5
name = "bendingspoons-proxy"
url = "https://proxy.registry.bendingspoons.com/pypi/simple"

[tool.black]
line-length = 100
exclude = '''
(
    \.eggs |
    \.git |
    \.githooks |
    \.idea |
    \.mypy_cache |
    \.?venv |
    \.vscode |
    build |
    dist |
    node_modules
)
'''

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
# subclassing any should be allowed because it would make it impossible use any kind of metaclass
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
# Some internal libraries have implicit_reexports (Stackdriver logging for example)
implicit_reexport = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

# ignore warnings '[mypy-<pattern>]' config sections
# this allows sharing this file among all libraries in the monorepo
warn_unused_configs = false